mediastreamer2-2.9.0: May 27, 2013
	* Add support of ICE (RFC 5245).
	* Split the libmediastreamer library in two libraries: libmediastreamer_base and
		libmediastreamer_voip. For VoIP support, both libraries must be linked to
		the executable.
	* API change to the audio_stream_new, video_stream_new, audio_stream_start_full,
		video_stream_start functions to use different addresses for RTP and RTCP.
	* Add accessors to set DSCP parameters for media streams.
	* AudioStream recording feature added
	* OpenGL video output for Linux 
	* Adaptive bitrate control improvements
	* faster call quality indicator feedback
	* stereo support for L16 codec
	* iOS
		-audio bugfixes
		- AAC-ELD codec integration
	* Android
		- integration with acoustic echo canceller from WebRTC
		- add pre-calibrated device latency table to configure echo canceller

mediastreamer2-2.8.2: February 22, 2012
	* Enable relative prefix for plugin loading

mediastreamer2-2.8.1: February 17, 2012
	* OpenGL fixes for mac OS X

mediastreamer2-2.8.0: December 22, 2011
	* audio conferencing
	* mac os X video support
	* new adaptive audio & video bitrate control api
	* new call quality indicator api

mediastreamer-2.7.3: March 28, 2011
	* major rework of the Mac OS X Audio Unit sound filter (macsnd.c)
	* compilation fix for FreeBSD

mediastreamer-2.7.2: March 3rd, 2011
	* fix windows crashes with some webcam outputing rgb

mediastreamer-2.7.1:  February 17th, 2011
	* enhance build for visual studio
	* fix configure bugs

mediastreamer-2.7.0: February 7th, 2011
	* add android video capture filter
	* add android video display filters: one for 2.1 and one for 2.2+
	* tune video encoder parameters for android
	* new scaler/colorspace conversion abstraction, with native ARM-optimized implementation
	* new X11+XvXshm display filter, deprecating SDL display filter.
	* add custom tone generation (in MSDtmfGen filter)
	* add custom tone detection in new filter MSToneDetector